--- a/.github/workflows/AndroidTest.yml
+++ b/.github/workflows/AndroidTest.yml
@@ -48,13 +48,17 @@ jobs:
 
       - name: Run Android Appium Tests
         run: |
-          GROUPS="${{ github.event.inputs.groups }}"
-
-          if [ -z "$GROUPS" ]; then
-            echo "Running ALL tests..."
-            ./gradlew clean test -Drun.env=browserstack --info --stacktrace
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ github.event.inputs.groups }}" ]; then
+            echo "Running group: ${{ github.event.inputs.groups }}"
+            ./gradlew clean test \
+              -Drun.env=browserstack \
+              -Dgroups=${{ github.event.inputs.groups }} \
+              --info
           else
-            echo "Running group: $GROUPS"
-            ./gradlew clean test -Drun.env=browserstack -Dgroups=$GROUPS --info --stacktrace
+            echo "Running ALL tests"
+            ./gradlew clean test \
+              -Drun.env=browserstack \
+              --info
           fi
+      
       
