--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     testImplementation 'org.testng:testng:7.10.2'
 
     // Dotenv
-    testImplementation 'io.github.cdimascio:dotenv-java:3.0.0'
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 
     // Allure
     implementation 'io.qameta.allure:allure-testng:2.29.1'
