(test): add test for filters

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,7 +14,7 @@ local.deviceName=emulator-5554
 local.platformVersion=13
 local.autoGrantPermissions=true
 local.newCommandTimeout=240
-local.noReset=true
+local.noReset=false
 local.appWaitActivity=com.swaglabsmobileapp.*
 local.appWaitDuration=30000
 
